fixed more <a> color in dark mode

--- a/app/assets/stylesheets/_custom_bootstrap.scss
+++ b/app/assets/stylesheets/_custom_bootstrap.scss
@@ -42,6 +42,13 @@ code {
       color: #ccdeff;
     }
   }
+
+  a.btn {
+    color: #fff;
+    &:hover {
+      color: #fff;
+    }
+  }
   
   .sidebar-container .nav-link:not(.active) {
     color: #f3f8fe !important;
